--- a/per-autisti.html
+++ b/per-autisti.html
@@ -1,101 +1,248 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Skibus - Per Autisti</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+  <title>Riepilogo Fermate Autisti • Skibus</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    .grad { background: linear-gradient(135deg, #22d3ee 0%, #60a5fa 50%, #34d399 100%); }
-    .glass { backdrop-filter: blur(8px); background: rgba(255,255,255,0.75); }
-    @media (prefers-color-scheme: dark){ .glass { background: rgba(17,24,39,0.6); color:#e5e7eb; } body{background:#0b1220;} }
+    :root{
+      --bg1:#e6f5ff; --bg2:#e9f8f2; --card:#ffffff; --ink:#0f172a; --sub:#475569; --ok:#16a34a; --chip:#eaf7ef; --line:#e6eaf0;
+      --radius:18px; --shadow: 0 8px 24px rgba(0,0,0,.08);
+    }
+    html,body{margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;background:linear-gradient(135deg,var(--bg1),var(--bg2)) fixed;color:var(--ink)}
+    .wrap{max-width:1100px;margin:32px auto;padding:0 16px}
+    .head{display:flex;align-items:center;gap:16px;justify-content:space-between;margin-bottom:20px}
+    .title{font-size:28px;font-weight:800;letter-spacing:.2px}
+    .muted{color:var(--sub);font-size:14px}
+    .pill{padding:6px 10px;border-radius:999px;background:var(--chip);color:var(--ok);font-weight:600;font-size:12px}
+    .grid{display:grid;grid-template-columns:1fr 1fr;gap:18px}
+    @media (max-width:900px){.grid{grid-template-columns:1fr}}
+    .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);padding:16px 16px 10px}
+    .card h2{margin:0 0 6px 0;font-size:18px}
+    .sub{margin:0;color:var(--sub);font-size:13px}
+    .row{display:flex;gap:12px;margin-top:12px}
+    .col{flex:1}
+    .slot{background:#f7fafc;border:1px solid var(--line);border-radius:14px;padding:10px 12px;margin-bottom:10px}
+    .slot h3{margin:0 0 4px 0;font-size:15px}
+    .slot .k{font-size:12px;color:var(--sub)}
+    .slot .v{font-weight:700}
+    .badge{display:inline-block;margin-left:8px;padding:2px 8px;border-radius:999px;background:#eef2ff;color:#4338ca;font-weight:700;font-size:12px}
+    .footer{margin-top:16px;font-size:12px;color:var(--sub)}
+    .lang{display:flex;gap:8px;align-items:center}
+    .btn{border:1px solid var(--line);background:#fff;border-radius:12px;padding:8px 10px;font-weight:600;cursor:pointer}
+    .table{width:100%;border-collapse:separate;border-spacing:0 8px;margin-top:8px}
+    .th{font-size:12px;color:var(--sub);text-transform:uppercase;letter-spacing:.4px}
+    .rowline{background:#fff;border:1px solid var(--line);box-shadow:0 2px 8px rgba(0,0,0,.04)}
+    .cell{padding:10px 12px}
+    .cell:first-child{border-top-left-radius:10px;border-bottom-left-radius:10px}
+    .cell:last-child{border-top-right-radius:10px;border-bottom-right-radius:10px;text-align:right;font-weight:800}
+    .empty{padding:14px;border:1px dashed var(--line);border-radius:12px;background:#fafafa;color:var(--sub);text-align:center}
   </style>
 </head>
-<body class="min-h-screen grad">
-  <div class="max-w-7xl mx-auto p-4 sm:p-10">
-    <header class="glass rounded-2xl p-4 sm:p-6 shadow-xl border border-white/20 flex items-end justify-between gap-4 flex-wrap">
+<body>
+  <div class="wrap">
+    <div class="head">
       <div>
-        <h1 class="text-3xl sm:text-4xl font-black tracking-tight">Skibus - Per Autisti</h1>
-        <p class="text-sm opacity-80">Heute Oggi e Morgen Domani da Google Sheets. Aggiornamento automatico ogni 60 secondi.</p>
+        <div class="title">Per Autisti • Riepilogo Fermate / Zusammenfassung der Haltestellen</div>
+        <div class="muted" id="subtitle">Dati in tempo quasi reale dal Google Sheet. Aggiornamento automatico ogni 60 secondi.</div>
       </div>
-      <div class="flex items-center gap-3">
-        <select id="lang" class="px-3 py-2 rounded-xl border text-sm">
-          <option value="de">Deutsch</option>
-          <option value="it">Italiano</option>
-        </select>
-        <button id="refreshBtn" class="px-3 py-2 rounded-xl border text-sm">Aggiorna</button>
+      <div class="lang">
+        <button class="btn" id="refreshBtn" title="Aggiorna / Aktualisieren">⟳ Aggiorna</button>
+        <span class="pill" id="stamp">—</span>
       </div>
-    </header>
+    </div>
 
-    <main class="grid lg:grid-cols-2 gap-6 mt-6">
-      <section id="heute" class="glass rounded-2xl p-4 border border-white/20 shadow-xl"></section>
-      <section id="morgen" class="glass rounded-2xl p-4 border border-white/20 shadow-xl"></section>
-    </main>
+    <div class="grid">
+      <div class="card">
+        <h2>Andata / Hinfahrt</h2>
+        <p class="sub">Raggruppato per Orario e Fermata scelta per l’andata / Uhrzeit und gewählter Ausstiegspunkt.</p>
+        <div id="andata"></div>
+      </div>
+      <div class="card">
+        <h2>Ritorno / Rückfahrt</h2>
+        <p class="sub">Raggruppato per Orario e Punto di partenza scelto / Uhrzeit und gewählter Startpunkt.</p>
+        <div id="ritorno"></div>
+      </div>
+    </div>
 
-    <footer class="glass mt-8 rounded-2xl p-4 border border-white/20 text-xs flex items-center justify-between">
-      <span id="lastRefresh">-</span>
-      <span id="status" class="opacity-80">Online</span>
-    </footer>
+    <div class="footer" id="footerNote">Pronto.</div>
   </div>
 
-  <script>
-  const SHEET_ID = "1aesu-t9x2WKdM-noyH55ybaRWXoPdk_QTfhfvgRxj58";
-  const SHEETS = { HEUTE: "Heute / Oggi", MORGEN: "Morgen / Domani" };
-  const L = {
-    de:{ title_heute:"Heute / Oggi", title_morgen:"Morgen / Domani", andata:"Hinfahrt", ritorno:"Rückfahrt",
-        data:"Datum / Data", orario:"Uhrzeit / Orario", fermataA:"Ausstiegspunkt / Fermata", camera:"Zimmer / Camera",
-        personeA:"Pers. Hinfahrt / Persone Andata", fermataScelta:"Gewählter Ausstiegspunkt / Fermata scelta",
-        partenza:"Abfahrtsstelle / Punto di partenza", personeR:"Pers. Rückfahrt / Persone Ritorno",
-        partenzaScelta:"Gewählter Startpunkt / Punto scelto" },
-    it:{ title_heute:"Heute / Oggi", title_morgen:"Morgen / Domani", andata:"Andata", ritorno:"Ritorno",
-        data:"Data", orario:"Orario", fermataA:"Fermata Andata", camera:"N. Camera",
-        personeA:"Persone Andata", fermataScelta:"Fermata scelta",
-        partenza:"Punto di partenza", personeR:"Persone Ritorno",
-        partenzaScelta:"Punto di partenza scelto" }
-  };
-  const gviz = s => `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?tqx=out:json&sheet=${encodeURIComponent(s)}`;
-  const parseGViz = t => JSON.parse(t.match(/google.visualization.Query.setResponse\\((.*)\\);/s)[1]);
-  async function fetchSheet(name){ const res=await fetch(gviz(name),{cache:"no-store"}); const txt=await res.text(); const j=parseGViz(txt); return j.table.rows.map(r=>r.c.map(c=>c?c.v:"")); }
+<script>
+/* ===================== CONFIG ===================== */
+const SHEET_ID = "1swHUZ3IyV9dw1Y9EqzuChMGOP7lOwOrIIPX190wOnAc";
+// Proveremo questi fogli in ordine finché uno risponde:
+const CANDIDATE_SHEETS = [
+  "Heute / Oggi", "Morgen / Domani", "Skibus Prenotazioni",
+  "Riepilogo Fermate Autisti", "Andata", "Ritorno"
+];
+// Mappa intestazioni bilingue
+const H = {
+  time: [
+    "Ora", "Uhrzeit", "Orario / Uhrzeit", "Uhrzeit / Orario"
+  ],
+  people: [
+    "Persone", "Personen", "Persone / Personen"
+  ],
+  stopOut: [
+    "Fermata scelta per l’andata", "Fermata scelta per l'andata",
+    "Gewählter Ausstiegspunkt", "Fermata scelta per l’andata / Gewählter Ausstiegspunkt",
+    "Gewaehlter Ausstiegspunkt" // fallback
+  ],
+  stopBack: [
+    "Punto di partenza scelto", "Gewählter Startpunkt",
+    "Punto di partenza scelto / Gewählter Startpunkt",
+    "Gewaehlter Startpunkt" // fallback
+  ]
+};
+// refresh ogni 60 s
+const REFRESH_MS = 60000;
 
-  function renderSection(container, title, rows, lang){
-    const t = L[lang];
-    const colCount = rows[0].length;
-    const cols = Array.from({length: Math.max(0,colCount-2)}, (_,i)=>i+2);
+/* ===================== CORE ===================== */
+const stampEl = document.getElementById("stamp");
+const footerEl = document.getElementById("footerNote");
+const andataEl = document.getElementById("andata");
+const ritornoEl = document.getElementById("ritorno");
+document.getElementById("refreshBtn").addEventListener("click", loadAll);
 
-    const block = (label, kvs) => `<div class="rounded-xl border p-3 bg-white/70">
-      <div class="font-semibold mb-2">${label}</div>
-      <div class="space-y-1 text-sm">${kvs.map(([k,v])=>`<div class="flex items-center justify-between gap-4"><span class="opacity-70">${k}</span><span class="font-medium">${v||""}</span></div>`).join("")}</div>
-    </div>`;
+function nowStamp(){
+  const d = new Date();
+  return d.toLocaleString(undefined,{hour12:false});
+}
+function setStamp() { stampEl.textContent = "Aggiornato • Aktualisiert: " + nowStamp(); }
 
-    const andata = cols.map(ci=>{
-      const d=rows[2][ci], or=rows[3][ci], ferm=rows[4][ci], cam=rows[5][ci], p=rows[6][ci], scel=rows[7][ci];
-      if(!or && !ferm) return null;
-      return block(`${t.andata} - ${or||""}`, [[t.data,d],[t.fermataA,ferm],[t.camera,cam],[t.personeA,p],[t.fermataScelta,scel]]);
-    }).filter(Boolean).join("");
+function gvizUrl(sheetName){
+  const t = Date.now(); // anti-cache
+  return `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?tqx=out:json&sheet=${encodeURIComponent(sheetName)}&t=${t}`;
+}
 
-    const ritorno = cols.map(ci=>{
-      const d=rows[9][ci], or=rows[10][ci], part=rows[11][ci], cam=rows[12][ci], p=rows[13][ci], scel=rows[14][ci];
-      if(!or && !part) return null;
-      return block(`${t.ritorno} - ${or||""}`, [[t.data,d],[t.partenza,part],[t.camera,cam],[t.personeR,p],[t.partenzaScelta,scel]]);
-    }).filter(Boolean).join("");
+async function tryFetch(sheetName){
+  const url = gvizUrl(sheetName);
+  const res = await fetch(url, { cache: "no-store" });
+  if(!res.ok) throw new Error(`HTTP ${res.status}`);
+  const txt = await res.text();
+  // risposta GViz: "google.visualization.Query.setResponse(...);"
+  const json = JSON.parse(txt.substring(txt.indexOf("{"), txt.lastIndexOf("}")+1));
+  if(!json.table || !json.table.rows) throw new Error("Formato GViz inatteso");
+  return json.table;
+}
 
-    container.innerHTML = `<h2 class="text-xl font-bold mb-3">${title}</h2>
-      <div class="grid gap-3">${andata || '<div class="text-sm opacity-70">Nessun dato</div>'}${ritorno}</div>`;
+function pickColIndex(headers, candidates){
+  for(let i=0;i<headers.length;i++){
+    const h = String(headers[i]||"").trim();
+    for(const c of candidates){
+      if(h.toLowerCase() === String(c).toLowerCase()) return i;
+    }
   }
+  // match parziale
+  for(let i=0;i<headers.length;i++){
+    const h = String(headers[i]||"").toLowerCase();
+    for(const c of candidates){
+      const cc = String(c).toLowerCase();
+      if(h.includes(cc)) return i;
+    }
+  }
+  return -1;
+}
 
-  async function refresh(){
-    const lang = document.getElementById("lang").value;
+function normalizeCell(c){ return c && c.v != null ? String(c.v).trim() : ""; }
+
+function buildGroups(table, mode){
+  // mode: "out" = Andata (stopOut) • "back" = Ritorno (stopBack)
+  const headers = (table.cols||[]).map(c => (c && c.label) ? c.label : "");
+  const iTime   = pickColIndex(headers, H.time);
+  const iPeople = pickColIndex(headers, H.people);
+  const iStop   = pickColIndex(headers, mode==="out" ? H.stopOut : H.stopBack);
+
+  if(iTime<0 || iStop<0 || iPeople<0){
+    throw new Error(`Intestazioni non trovate (${mode}). Trovati: ${JSON.stringify(headers)}`);
+  }
+  const map = new Map(); // key: time|stop => count
+  for(const r of table.rows){
+    const cells = r.c || [];
+    const time = normalizeCell(cells[iTime]);
+    const stop = normalizeCell(cells[iStop]);
+    const peopleRaw = normalizeCell(cells[iPeople]);
+    const people = Number(peopleRaw.replace(",", ".")) || 0;
+    if(!time || !stop || !people) continue;
+    const key = `${time}|${stop}`;
+    map.set(key, (map.get(key)||0) + people);
+  }
+  // convert to object grouped by time -> [{stop, people}]
+  const byTime = {};
+  for(const [key, val] of map){
+    const [t, s] = key.split("|");
+    if(!byTime[t]) byTime[t] = [];
+    byTime[t].push({stop:s, people:val});
+  }
+  // sort times numericamente (hh:mm)
+  const times = Object.keys(byTime).sort((a,b)=>{
+    const [ah,am]=a.split(":").map(Number);
+    const [bh,bm]=b.split(":").map(Number);
+    return (ah*60+am)-(bh*60+bm);
+  });
+  return { times, byTime };
+}
+
+function renderSection(container, groups){
+  container.innerHTML = "";
+  if(groups.times.length===0){
+    container.innerHTML = `<div class="empty">Nessun dato disponibile / Keine Daten verfügbar.</div>`;
+    return;
+  }
+  for(const t of groups.times){
+    const rows = groups.byTime[t].sort((a,b)=> a.stop.localeCompare(b.stop, undefined, {sensitivity:"base"}));
+    const total = rows.reduce((s,x)=>s+x.people,0);
+    const wrap = document.createElement("div");
+    wrap.className = "slot";
+    wrap.innerHTML = `
+      <h3>${t} <span class="badge">${total} Personen / Persone</span></h3>
+      <table class="table">
+        <thead>
+          <tr class="th">
+            <th class="cell" style="text-align:left">Haltestelle / Fermata</th>
+            <th class="cell">Personen / Persone</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    `;
+    const tbody = wrap.querySelector("tbody");
+    for(const r of rows){
+      const tr = document.createElement("tr");
+      tr.className = "rowline";
+      tr.innerHTML = `
+        <td class="cell">${r.stop}</td>
+        <td class="cell">${r.people}</td>
+      `;
+      tbody.appendChild(tr);
+    }
+    container.appendChild(wrap);
+  }
+}
+
+async function loadAll(){
+  footerEl.textContent = "Aggiornamento in corso… / Wird aktualisiert…";
+  let table = null, usedSheet = null;
+  for(const name of CANDIDATE_SHEETS){
     try{
-      const [H,M] = await Promise.all([fetchSheet(SHEETS.HEUTE), fetchSheet(SHEETS.MORGEN)]);
-      renderSection(document.getElementById("heute"), lang==="de"?L.de.title_heute:L.it.title_heute, H, lang);
-      renderSection(document.getElementById("morgen"), lang==="de"?L.de.title_morgen:L.it.title_morgen, M, lang);
-      document.getElementById("lastRefresh").textContent = "Ultimo aggiornamento: " + new Date().toLocaleString();
-      document.getElementById("status").textContent = navigator.onLine ? "Online" : "Offline";
-    }catch(e){ document.getElementById("status").textContent = "Errore"; console.error(e); }
+      table = await tryFetch(name);
+      usedSheet = name;
+      break;
+    }catch(e){
+      // prova prossimo
+    }
   }
-  document.getElementById("lang").addEventListener("change", refresh);
-  document.getElementById("refreshBtn").addEventListener("click", refresh);
-  refresh(); setInterval(refresh, 60000);
-  </script>
-</body>
-</html>
+  if(!table){
+    footerEl.textContent = "Impossibile leggere il Google Sheet. Verifica la pubblicazione o i permessi.";
+    return;
+  }
+  try{
+    const gOut  = buildGroups(table, "out");
+    const gBack = buildGroups(table, "b
